[package]
name = "uselesskey-bdd"
version = "0.0.0"
publish = false
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Cucumber BDD test runner for uselesskey fixture crates."
categories.workspace = true
keywords = ["testing", "bdd", "cucumber", "fixtures", "crypto"]

[dependencies]
uselesskey-bdd-steps = { path = "../uselesskey-bdd-steps", default-features = false, features = [] }
tokio.workspace = true

[dev-dependencies]
uselesskey-test-grid.workspace = true

[features]
default = ["uk-default"]
uk-default = ["uselesskey-bdd-steps/uk-default"]
uk-all = ["uselesskey-bdd-steps/uk-all", "uselesskey-bdd-steps/uk-rsa", "uselesskey-bdd-steps/uk-ecdsa", "uselesskey-bdd-steps/uk-ed25519", "uselesskey-bdd-steps/uk-hmac", "uselesskey-bdd-steps/uk-ssh", "uselesskey-bdd-steps/uk-pgp", "uselesskey-bdd-steps/uk-x509", "uselesskey-bdd-steps/uk-jwk", "uselesskey-bdd-steps/uk-token", "uselesskey-bdd-steps/uk-jwt", "uselesskey-bdd-steps/uk-core-id", "uselesskey-bdd-steps/uk-core-token-shape", "uselesskey-bdd-steps/uk-core-seed", "uselesskey-bdd-steps/uk-core-factory", "uselesskey-bdd-steps/uk-core-kid", "uselesskey-bdd-steps/uk-core-keypair", "uselesskey-bdd-steps/uk-core-negative", "uselesskey-bdd-steps/uk-core-sink", "uselesskey-bdd-steps/uk-aws-lc-rs", "uselesskey-bdd-steps/uk-rustls", "uselesskey-bdd-steps/uk-tonic", "uselesskey-bdd-steps/uk-ring", "uselesskey-bdd-steps/uk-rustcrypto"]
uk-core-id = ["uselesskey-bdd-steps/uk-core-id"]
uk-core-token-shape = ["uselesskey-bdd-steps/uk-core-token-shape"]
uk-core-seed = ["uselesskey-bdd-steps/uk-core-seed"]
uk-core-factory = ["uselesskey-bdd-steps/uk-core-factory"]
uk-core-kid = ["uselesskey-bdd-steps/uk-core-kid"]
uk-core-keypair = ["uselesskey-bdd-steps/uk-core-keypair"]
uk-core-negative = ["uselesskey-bdd-steps/uk-core-negative"]
uk-core-sink = ["uselesskey-bdd-steps/uk-core-sink"]
uk-jwt = ["uselesskey-bdd-steps/uk-jwt"]
uk-rsa = ["uselesskey-bdd-steps/uk-rsa"]
uk-ecdsa = ["uselesskey-bdd-steps/uk-ecdsa"]
uk-ed25519 = ["uselesskey-bdd-steps/uk-ed25519"]
uk-hmac = ["uselesskey-bdd-steps/uk-hmac"]
uk-ssh = ["uselesskey-bdd-steps/uk-ssh"]
uk-pgp = ["uselesskey-bdd-steps/uk-pgp"]
uk-x509 = ["uselesskey-bdd-steps/uk-x509"]
uk-jwk = ["uselesskey-bdd-steps/uk-jwk"]
uk-token = ["uselesskey-bdd-steps/uk-token"]
uk-aws-lc-rs = ["uselesskey-bdd-steps/uk-aws-lc-rs"]
uk-rustls = ["uselesskey-bdd-steps/uk-rustls"]
uk-tonic = ["uselesskey-bdd-steps/uk-tonic"]
uk-ring = ["uselesskey-bdd-steps/uk-ring"]
uk-rustcrypto = ["uselesskey-bdd-steps/uk-rustcrypto"]

[[test]]
name = "bdd"
harness = false

[lints]
workspace = true
