[package]
name = "uselesskey-cli"
version = "0.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
authors.workspace = true
description = "Deterministic fixture generation and export helpers for local secret handoff formats."
keywords = ["cli", "fixtures", "export", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
documentation = "https://docs.rs/uselesskey-cli"

[features]
default = ["generate", "rsa-materialize"]
generate = [
    "dep:uselesskey-rsa",
    "dep:uselesskey-ecdsa",
    "dep:uselesskey-ed25519",
    "dep:uselesskey-hmac",
    "dep:uselesskey-x509",
]
rsa-materialize = ["dep:uselesskey-rsa"]

[[bin]]
name = "uselesskey"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
toml = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uselesskey-core.workspace = true
uselesskey-ecdsa = { workspace = true, features = ["jwk"], optional = true }
uselesskey-ed25519 = { workspace = true, features = ["jwk"], optional = true }
uselesskey-hmac = { workspace = true, features = ["jwk"], optional = true }
uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.6.0" }
uselesskey-rsa = { workspace = true, features = ["jwk"], optional = true }
uselesskey-token.workspace = true
uselesskey-x509 = { workspace = true, optional = true }

[dev-dependencies]
assert_cmd = "2.1.1"
insta.workspace = true
predicates = "3.1.3"
serde_json.workspace = true
tempfile.workspace = true

[package.metadata.docs.rs]
all-features = true

[lints]
workspace = true
