[package]
name = "uselesskey-core-base62"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Base62 generation primitives for uselesskey fixture crates."
categories.workspace = true
keywords = ["base62", "rng", "fixtures", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-base62"
authors.workspace = true

[dependencies]
uselesskey-token.workspace = true

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true
uselesskey-core-seed.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true
