[package]
name = "uselesskey-core-cache"
version = "0.7.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Identity-keyed typed cache primitives for uselesskey fixture factories."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "cache", "deterministic", "testing", "core"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-cache"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.7.1", default-features = false }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true
uselesskey-core-id = { workspace = true }

[features]
default = ["std"]
std = ["uselesskey-core/std"]

[package.metadata.docs.rs]
features = ["std"]


[lints]
workspace = true
