[package]
name = "uselesskey-core-factory"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Factory orchestration and cache lookup behavior for uselesskey fixtures."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "deterministic", "cache", "factory", "testing"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-factory"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.7.0", default-features = false }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde = { workspace = true }
uselesskey-core-id = { workspace = true }

[features]
default = ["std"]
std = ["uselesskey-core/std"]

[package.metadata.docs.rs]
features = ["std"]


[lints]
workspace = true
