[package]
name = "uselesskey-core-hash"
version = "0.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Length-prefixed hashing helpers shared by deterministic fixture derivation paths."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["hash", "blake3", "fixtures", "testing", "determinism"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-hash"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.6.0", default-features = false }

[dev-dependencies]
blake3.workspace = true
insta.workspace = true
proptest.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core/std"]

[package.metadata.docs.rs]
features = ["std"]


[lints]
workspace = true
