[package]
name = "uselesskey-core-id"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Core identity and derivation primitives for uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "seed", "determinism", "crypto", "testing"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-id"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.7.0", default-features = false }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true
uselesskey-core-seed = { workspace = true }
uselesskey-test-support = { workspace = true }

[features]
default = ["std"]
std = ["uselesskey-core/std"]

[package.metadata.docs.rs]
features = ["std"]


[lints]
workspace = true
