[package]
name = "uselesskey-core-jwk"
version = "0.7.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deprecated compatibility shim for JWK/JWKS models; prefer uselesskey-jwk."
categories.workspace = true
keywords = ["jwk", "jwks", "jwt", "fixtures", "testing"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwk"
authors.workspace = true

[dependencies]
uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.7.1" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true
serde_json.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true
