[package]
name = "uselesskey-core-jwks-order"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deprecated compatibility shim for JWKS ordering; prefer uselesskey-jwk."
categories.workspace = true
keywords = ["jwk", "jwks", "fixtures", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-jwks-order"
authors.workspace = true

[dependencies]
uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.7.0" }

[dev-dependencies]
insta.workspace = true
proptest.workspace = true
serde.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true
