[package]
name = "uselesskey-core-kid"
version = "0.7.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deprecated compatibility shim for deterministic kid helpers; prefer uselesskey-jwk."
categories.workspace = true
keywords = ["kid", "jwk", "fixtures", "testing", "deterministic"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-kid"
authors.workspace = true

[dependencies]
uselesskey-jwk = { path = "../uselesskey-jwk", version = "0.7.1", default-features = false }

[dev-dependencies]
base64.workspace = true
blake3.workspace = true
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true

[package.metadata.docs.rs]
all-features = true


[lints]
workspace = true
