[package]
name = "uselesskey-core-rustls-pki"
version = "0.7.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "rustls-pki-types adapters for uselesskey fixture crates."
categories.workspace = true
keywords = ["rustls", "pki", "fixtures", "testing", "adapter"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-rustls-pki"
authors.workspace = true

[dependencies]
rustls-pki-types = "1"

# Key type crates (all optional)
uselesskey-x509 = { path = "../uselesskey-x509", version = "0.7.0", optional = true }
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.7.0", optional = true }
uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.7.0", optional = true }
uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.7.0", optional = true }

[features]
default = ["x509"]
x509 = ["dep:uselesskey-x509"]
rsa = ["dep:uselesskey-rsa"]
ecdsa = ["dep:uselesskey-ecdsa"]
ed25519 = ["dep:uselesskey-ed25519"]
all = ["x509", "rsa", "ecdsa", "ed25519"]

[dev-dependencies]
insta.workspace = true
serde = { workspace = true, features = ["derive"] }
uselesskey-core = { path = "../uselesskey-core", version = "0.7.0" }
uselesskey-x509 = { path = "../uselesskey-x509", version = "0.7.0" }
uselesskey-rsa = { path = "../uselesskey-rsa", version = "0.7.0" }
uselesskey-ecdsa = { path = "../uselesskey-ecdsa", version = "0.7.0" }
uselesskey-ed25519 = { path = "../uselesskey-ed25519", version = "0.7.0" }

[package.metadata.docs.rs]
features = ["all"]


[lints]
workspace = true
