[package]
name = "uselesskey-core-rustls-pki"
version = "0.7.2"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Deprecated compatibility shim re-exporting rustls-pki extension traits from uselesskey-rustls."
categories.workspace = true
keywords = ["rustls", "pki", "fixtures", "testing", "adapter"]
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-rustls-pki"
authors.workspace = true

[dependencies]
uselesskey-rustls.workspace = true

[features]
default = ["x509"]
x509 = ["uselesskey-rustls/x509"]
rsa = ["uselesskey-rustls/rsa"]
ecdsa = ["uselesskey-rustls/ecdsa"]
ed25519 = ["uselesskey-rustls/ed25519"]
all = ["x509", "rsa", "ecdsa", "ed25519"]

[package.metadata.docs.rs]
features = ["all"]


[lints]
workspace = true
