[package]
name = "uselesskey-core-seed"
version = "0.6.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
description = "Seed parsing and redaction primitives for uselesskey."
readme = "README.md"
exclude = ["fuzz/**", "corpus/**", "**/*.der", "**/*.pem"]
categories.workspace = true
keywords = ["fixtures", "seed", "determinism", "testing", "crypto"]
homepage.workspace = true
documentation = "https://docs.rs/uselesskey-core-seed"
authors.workspace = true

[dependencies]
uselesskey-core = { path = "../uselesskey-core", version = "0.6.0", default-features = false }

[dev-dependencies]
blake3.workspace = true
insta.workspace = true
proptest.workspace = true
rstest.workspace = true
serde.workspace = true

[features]
default = ["std"]
std = ["uselesskey-core/std"]

[package.metadata.docs.rs]
features = ["std"]


[lints]
workspace = true
